# ChessCpp

./: CMakeLists.txt  LICENSE  README.md
include/: board.hpp  figure.hpp  game.hpp  player.hpp
src/: main.cpp
src/board/: board.cpp  test.cpp
src/figures/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
src/game/: game.cpp
src/player/: player.cpp
